--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,7 +13,7 @@ Variables
     --blue-dark: #18293c;
     --orange: #ffa500;
     --green-yellow: #cddc39;
-    --pink-light: #efa2b4;
+    --pink-light: #a8a2ef;
     --cyan-light: #aef1ee;
     --white: #ffffff;
     --white-alpha-40: rgba(225, 225, 225, .40);
